# cloud-native-architecture-mcp-server

./: .gitignore  README.md  how-to-publish.md  pyproject.toml
examples/: README.md  aws_example.json  gcp_example.json  kubernetes_example.json  simple-k8s.md
src/cloud_native_architecture_mcp/: __init__.py  server.py
