[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-native-architecture-mcp"
version = "0.1.5"
description = "MCP server for building cloud-native architecture diagrams (Kubernetes, AWS, GCP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Michael Levan", email = "mlevan1992@gmail.com" }
]
keywords = ["mcp", "architecture", "diagrams", "kubernetes", "aws", "gcp", "cloud-native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "mcp>=0.9.0",
    "diagrams>=0.23.0",
    "graphviz>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cloud-native-architecture-mcp-server"
Documentation = "https://github.com/yourusername/cloud-native-architecture-mcp-server#readme"
Repository = "https://github.com/yourusername/cloud-native-architecture-mcp-server"
Issues = "https://github.com/yourusername/cloud-native-architecture-mcp-server/issues"

[project.scripts]
cloud-native-architecture-mcp = "cloud_native_architecture_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_native_architecture_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
